# Dais

./: .gitignore  AGENTS.md  README.md  nx.json  package.json  pnpm-lock.yaml  taskfile.yaml
src-server/: .gitignore  entry.py  entry.spec  prebuilt-down.toml  project.json  pyproject.toml  requirements.txt  taskfile.yaml
src-server/scripts/: export_openapi.py  export_tool_specs.py  rename_python_sidecar.py  watches.py
src-server/src/: __init__.py  app.py  binaries.py  common.py  logger.py  main.py  settings.py  shell_config.py
src-server/src/agent/: constants.py  context.py  exception_handlers.py  task.py  temp_generation.py  tool_manager.py  types.py
src-server/src/agent/builtin_tools/: ask_user.py  file_system.py  finish_task.py
src-server/src/agent/context/: __init__.py  aliases.py  models.py  persistence.py
src-server/src/agent/notes/: __init__.py  manager.py  materializer.py  watcher.py  workspace_ref_manager.py
src-server/src/agent/prompts/: README.md  __init__.py  instruction.py  title_summarization.py
src-server/src/agent/skills/: __init__.py  materializer.py
src-server/src/agent/task/: __init__.py  llm_request_manager.py  message_manager.py  persistence.py  schedule_runner.py  tool_call_dispatcher.py  tool_call_reviewer.py
src-server/src/agent/tool/: __init__.py  types.py
src-server/src/agent/tools/: __init__.py  file_system.py
src-server/src/agent/toolset_manager/: __init__.py  builtin_toolset_manager.py  mcp_toolset_manager.py  types.py
src-server/src/agent/types/: __init__.py  context_usage.py  metadata.py  schedule_complete_event.py  stop_reason.py  stream.py  task_result.py
src-server/src/agent/utils/: __init__.py  magika_instance.py  markdown.py  normalize_content_type.py
src-server/src/api/: __init__.py  cleanup.py  exception_handlers.py  exceptions.py  lifespan.py  logger.py  sse_dispatcher.py  types.py
src-server/src/api/dependencies/: __init__.py  db_session.py
src-server/src/api/middlewares/: __init__.py  db_session.py
src-server/src/api/routes/: __init__.py  agent.py  filesystem.py  health.py  llm_api.py  llm_model.py  provider.py  settings.py  skill.py  sse.py  static.py  toolset.py  types.py  workspace.py
src-server/src/api/sse_dispatcher/: __init__.py  types.py
src-server/src/db/: __init__.py
src-server/src/db/alembic/: env.py
src-server/src/routes/: __init__.py  agent.py  llm_api.py  llm_model.py  provider.py  task.py  toolset.py  types.py  workspace.py
src-server/src/schemas/: __init__.py  agent.py  extra.py  filesystem.py  provider.py  skill.py  task.py  toolset.py  workspace.py
src-server/src/services/: ServiceBase.py  __init__.py  agent.py  exceptions.py  llm_model.py  markdown_cache.py  provider.py  run_record.py  schedule.py  service_base.py  skill.py  task.py  toolset.py  utils.py  workspace.py
src-server/src/utils/: __init__.py  directory_watcher.py  get_unique_filename.py  ignore_rules.py  markdown_converter.py  open_in_file_manager.py  parent_watchdog.py  retention.py  scandir_recursive.py  scheduler.py  singleton.py  to_base64_str.py
src-server/tests/: conftest.py  test_code_execution.py  test_file_system.py  test_os_interactions.py  test_parent_watchdog.py  test_truncate_output.py
src-server/tests/db/: conftest.py  test_init_initial_data.py  test_migration_non_empty.py
src-server/tests/file_system/: conftest.py  test_copy.py  test_delete.py  test_edge_cases.py  test_edit_file.py  test_find_files.py  test_init.py  test_integration.py  test_list_directory.py  test_read_file.py  test_read_file_batch.py  test_search_file.py  test_write_file.py
src-server/tests/services/: conftest.py  test_agent_service.py  test_llm_model_service.py  test_markdown_cache_service.py  test_provider_service.py  test_run_record_service.py  test_schedule_service.py  test_service_base.py  test_skill_service.py  test_task_service.py  test_toolset_service.py  test_workspace_service.py
src-server/tests/tools/: conftest.py  test_context_control.py  test_os_interactions.py  test_web_interaction.py
src-server/tests/utils/: test_get_unique_filename.py  test_to_base64_str.py
src-tauri/: Cargo.toml  project.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: args.rs  lib.rs  state.rs
src-tauri/src/commands/: devtools.rs  keep_awake.rs  mod.rs
src-tauri/src/protocols/: app.rs  mod.rs  static.rs
src-tauri/src/utils/: mod.rs
(+622 files in other folders)
