[project]
name = "dais-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dais-sdk==0.6.18",
    "dais-shell==0.1.1",

    "alembic==1.18.4",
    "aiosqlite==0.22.1",
    "binaryornot==0.4.4",
    "fastapi==0.128.6",
    "fastapi-pagination==0.15.10",
    "loguru==0.7.3",
    "markitdown[docx,pdf,pptx]==0.1.4",
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "sqlalchemy[asyncio]==2.0.46",
    "sse-starlette==3.2.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "psutil>=7.2.2",
    "watchfiles>=1.1.1",
    "openapi-pydantic>=0.5.1",
]
test = ["pytest>=9.0.0", "pytest-cov>=7.0.0", "pytest-mock>=3.15.0"]
types = ["types-binaryornot==0.4.0.20250507"]

[tool.uv]
override-dependencies = ["onnxruntime==1.24.1"]
