[project]
name = "dais-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.12.0",
    "dais-sdk==0.10.8",
    "dais-shell==0.1.9",
    "dais-scantree==0.2.2",
    "alembic==1.18.4",
    "aiosqlite==0.22.1",
    "binaryornot==0.6.0",
    "fastapi==0.135.1",
    "fastapi-pagination==0.15.10",
    "loguru==0.7.3",
    "markitdown[docx,pdf,pptx]==0.1.5",
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "RapidFuzz==3.14.3",
    "sqlalchemy[asyncio]==2.0.46",
    "uvicorn==0.40.0",
    "trafilatura==2.0.0",
    "magika>=0.6.2",
    "watchfiles==1.1.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "psutil>=7.2.2",
    "openapi-pydantic>=0.5.1",
    "pyright>=1.1.408",
]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-alembic>=0.12.1",
]
types = ["types-binaryornot==0.4.0.20250507"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/dist",
    "**/alembic/versions",
    "**/tests",
]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "service: service layer tests",
    "api: API / route tests",
    "tool: tool tests",
    "integration: tests involving real database, file system, or component integration",
    "slow: slow-running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
